# PDM_in_BG

./: README.md  pyproject.toml  requirements.txt
notebooks/: preamble.ipynb
notebooks/cortical dynamics/: cortical processing effect.ipynb  suite1.ipynb  suite2.ipynb
notebooks/learning/: pathway bias performance.ipynb  suite3.ipynb  suite4.ipynb
notebooks/model realizations/: suite5.ipynb
src/project/networks/: cbgt.py  cortex.py
src/project/utilities/: __init__.py  io.py  simulation.py  statistics.py
